[package]
name = "mcp-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
k3-wasm-macros = { version  ="0.1.12", features = ["nightly"]}
k3-wasm-sdk = "0.1.17"
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }
k3-json = { path = "./k3_json", version = "*" }
num-bigint = '0.4'
num-traits = '0.2'
hex = "0.4"
